Show star for marked questions in the left sidebar during test
Code by Y. Annanias

--- a/Modules/Test/templates/default/tpl.il_as_tst_list_of_questions_short.html
+++ b/Modules/Test/templates/default/tpl.il_as_tst_list_of_questions_short.html
@@ -1,4 +1,9 @@
 <h1>{LIST_OF_QUESTIONS}</h1>
 <!-- BEGIN item -->
-<div class="shortlist"><input class="{CLASS}" type="submit"<!-- BEGIN description --> title="{DESCRIPTION}"<!-- END description --> name="cmd[gotoquestion_{SEQUENCE}]" value="{ITEM}" /></div>
+<div class="shortlist" style="clear:left;">
+       <input class="{CLASS}" type="submit" style="float:left;" 
+          <!-- BEGIN description --> title="{DESCRIPTION}"<!-- END description -->   
+          name="cmd[gotoquestion_{SEQUENCE}]" value="{ITEM}" />
+       <img src="{HREF_MARKED}" alt="{ALT_MARKED}" />		
+</div>
 <!-- END item -->
